style: 프리티어 설정 변경

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,9 @@
   "tabWidth": 2,
   "singleQuote": true,
   "trailingComma": "all",
-  "semi": true
+  "semi": true,
+  "bracketSpacing": true,
+  "jsxBracketSameLine": true,
+  "arrowParens": "avoid",
+  "htmlWhitespaceSensitivity": "css"
 }
