--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@loadable/component": "^5.15.0",
+    "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
+    "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
