--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
   "semi": true,
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "htmlWhitespaceSensitivity": "css"
 }
