--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
@@ -34,6 +36,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/autosize": "^4.0.1",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.3",
     "@types/node": "^14.14.31",
