--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -27,6 +31,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
+    "socket.io-client": "^2.4.0",
     "swr": "^0.5.6",
     "typescript": "^4.2.2"
   },
@@ -42,6 +47,7 @@
     "@types/node": "^14.14.31",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^1.4.36",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-server": "^3.11.1",
     "babel-loader": "^8.2.2",
