--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.7",
     "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "gravatar": "^1.8.2",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-mentions": "^4.3.0",
     "react-router": "^5.2.0",
@@ -45,6 +47,7 @@
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
     "@types/loadable__component": "^5.13.3",
     "@types/node": "^14.14.31",
+    "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.36",
