--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
-    "react-mentions": "^4.3.0",
+    "react-mentions": "^4.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-toastify": "^8.1.0",
@@ -48,6 +48,7 @@
     "@types/loadable__component": "^5.13.3",
     "@types/node": "^14.14.31",
     "@types/react-custom-scrollbars": "^4.0.10",
+    "@types/react-mentions": "^4.1.5",
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/socket.io-client": "^1.4.36",
