--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@jjordy/swr-devtools": "^2.2.0",
     "@loadable/component": "^5.15.0",
     "@types/gravatar": "^1.8.3",
     "@types/react": "^17.0.2",
